tests222/tests2/test279.out
lli: <stdin>:1:1: error: expected top-level entity
line 11: function x is not defined
^
